--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
     "ts-node": "10.9.1",
-    "typescript": "5.1.3"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@types/typescript": "^2.0.0",
+    "audit": "^0.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
@@ -34,6 +36,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fix": "^0.0.3",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.3.1",
